--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "elm-init": "node adze.js init",
     "prepare": "npm install -g docco",
     "start": "node adze.js make",
+    "browserify-ws": "browserify node_modules/options/lib/options.js node_modules/ultron/index.js node_modules/ws/index.js --node --ignore-missing --outfile tmp/ws.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["elm", "server", "build", "tool"],
